# statforge

./: .gitignore  pyproject.toml
app/: main.py
app/analysis/: __init__.py  comparison.py  descriptive.py  modeling.py  plotting.py  preprocessing.py  reporting.py
app/controllers/: __init__.py  comparison_controller.py  data_controller.py  model_controller.py  plot_controller.py  preprocessing_controller.py  session_controller.py
app/persistence/: __init__.py  blob_store.py  schema.sql  store.py
app/ui/: data_view.py  graphs_view.py  import_preview.py  main_window.py  model_comparison.py  modeling_view.py  preprocessing_view.py  report_builder.py  sessions_home.py
app/ui/dialogs/: __init__.py  add_divider_dialog.py  add_interaction_dialog.py  add_text_block_dialog.py  new_session_dialog.py
app/ui/models/: __init__.py  paginated_data_model.py
app/util/: __init__.py  errors.py  ids.py  strings.py  undo.py
docs/: 01_PRD.md  02_Technical_Requirements.md  03_User_Journey.md
docs/ui-design-elements/stitch_biscay_blue_app_design/add_divider_dialog/: code.html
docs/ui-design-elements/stitch_biscay_blue_app_design/add_interaction_dialog/: code.html
docs/ui-design-elements/stitch_biscay_blue_app_design/add_text_block_dialog/: code.html
resources/styles/: theme.qss
resources/templates/: report.html
tests/: test_classification.py  test_comparison.py  test_descriptive.py  test_persistence.py  test_plotting.py  test_preprocessing.py  test_regression.py  test_reporting.py
tests/integration/: test_full_workflow.py
tests/ui/: test_smoke.py
(+30 files in other folders)
