[project]
name = "statforge"
version = "0.1.0"
description = "Offline, no-code statistical analysis studio"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "PySide6>=6.7",
    "pandas>=2.2",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "pyarrow>=17.0",
    "seaborn>=0.13",
    "matplotlib>=3.9",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "patsy>=0.5",
    "jinja2>=3.1",
    "weasyprint>=62",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.8",
]

[project.scripts]
statforge = "app.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
